# JSON-Basic-Tools

./: .gitignore  CMakeLists.txt  README.md  main.cpp
docs/: code plan.md  demand.md  detailed design.md  general design.md  logs.md
src/: JSON.h
src/json/: JSON.h  JSON_ARRAY.h  JSON_BOOL.h  JSON_DOUBLE.h  JSON_INT.h  JSON_NULL.h  JSON_OBJECT.cpp  JSON_OBJECT.h  JSON_STRING.h  JSON_VALUE.h  typedef.h
src/parser/: JSONParser.cpp  JSONParser.h
test/: generator_result.json  result.json  test_generator.cpp  test_parser.cpp
